--- a/trunk/EasiCab/SourceCode/EasiCab/app/src/main/res/layout/activity_registeration.xml
+++ b/trunk/EasiCab/SourceCode/EasiCab/app/src/main/res/layout/activity_registeration.xml
@@ -139,7 +139,7 @@
                 android:layout_marginTop="16dp"
                 android:text="submit"
                 android:textColor="#fff"
-                android:background="@drawable/btn"/>
+                android:background="@color/app_orange_background"/>
 
         </LinearLayout>
 
