--- a/trunk/EasiCab/SourceCode/EasiCab/app/src/main/res/layout/activity_spash_screen.xml
+++ b/trunk/EasiCab/SourceCode/EasiCab/app/src/main/res/layout/activity_spash_screen.xml
@@ -4,10 +4,18 @@
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
     android:paddingBottom="@dimen/activity_vertical_margin"
-    android:background="@color/app_background"
-    tools:context=".SpashScreen">
+    android:background="@mipmap/splashscreenbackground"
+    tools:context=".SplashScreen">
 
+    <ImageView
+        android:id="@+id/taxiWithMarker"
+        android:layout_width="200dp"
+        android:src="@mipmap/locationpoint"
+        android:layout_height="200dp"
+       android:layout_above="@+id/logo"
+        android:layout_centerHorizontal="true"
 
+        />
 
     <ImageView
         android:id="@+id/logo"
