git-svn-id: https://asi-storage07.blr.allegisindia.com/svn/EASi_App-POC@51 56ebe14e-9609-f449-8404-ff2adf786831

--- a/trunk/EasiCab/SourceCode/EasiCab/app/src/main/res/values/color.xml
+++ b/trunk/EasiCab/SourceCode/EasiCab/app/src/main/res/values/color.xml
@@ -9,6 +9,7 @@
   <color name="app_textBig">#00FFFFFF</color>
   <color name="transparent_bg">#00000000</color>
   <color name="black">#000000</color>
+  <color name="app_white">#ffffff</color>
   <color name="app_yellow_background">#ECCC36</color>
   <color name="app_orange_background">#F29902</color>
   <color name="app_black">#0F2035</color>
