--- a/trunk/EasiCab/SourceCode/EasiCab/app/src/main/res/layout/activity_registeration.xml
+++ b/trunk/EasiCab/SourceCode/EasiCab/app/src/main/res/layout/activity_registeration.xml
@@ -18,7 +18,7 @@
             <LinearLayout
             android:layout_width="fill_parent"
             android:layout_height="48dp"
-            android:background="#e8e8e7"
+            android:background="@color/application_background"
             android:orientation="horizontal"
             android:layout_alignParentTop="true">
 
