--- a/trunk/EasiCab/SourceCode/EasiCab/app/src/main/res/values/dimens.xml
+++ b/trunk/EasiCab/SourceCode/EasiCab/app/src/main/res/values/dimens.xml
@@ -2,4 +2,22 @@
     <!-- Default screen margins, per the Android Design guidelines. -->
     <dimen name="activity_horizontal_margin">16dp</dimen>
     <dimen name="activity_vertical_margin">16dp</dimen>
+
+
+    <!--navigation drwaer-->
+    <dimen name="drwaerwidth">230dp</dimen>
+    <dimen name="ldrawer_drawableSize">40dp</dimen>
+    <dimen name="ldrawer_barSize">18dp</dimen>
+    <dimen name="ldrawer_topBottomBarArrowSize">11dp</dimen>
+    <dimen name="ldrawer_thickness">2dp</dimen>
+    <dimen name="ldrawer_gapBetweenBars">3dp</dimen>
+    <dimen name="ldrawer_middleBarArrowSize">16dp</dimen>
+
+    <dimen name="img_width">35dp</dimen>
+    <dimen name="img_height">38dp</dimen>
+    <dimen name="divider_height">1.5dp</dimen>
+    <dimen name="textsize">22sp</dimen>
+    <dimen name="textpadding">10dp</dimen>
+    <dimen name="img_padding">4dp</dimen>
+    <dimen name="view_margin">6dp</dimen>
 </resources>
